syntax = "proto3";
//import "google/protobuf/timestamp.proto";
import "status.proto";
option go_package = "proto";


service Files {
    rpc CreateFileSpace (CreateFileSpaceRequest) returns (CreateFileSpaceResponse);
}

message FileMeta {
    string filename = 1;
    string length = 2;
    string sha256 = 3;
}

message File {
    string filename = 1;
    FileMeta meta = 2;
}

message Directory {
    string directory_name = 1;
    repeated string File = 2;
}

// CreateFileSpace
message CreateFileSpaceRequest {
    string space_name = 1;
}

message CreateFileSpaceResponse {
    Status status = 1;
}

// CheckFileSpaceExists
message FetchFileSpaceRequest {
    string space_name = 1;
}

message FetchFileSpaceResponse {
    bool exist = 1;
    string prev_file_space = 2;
}